# test-assignment-4

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __main__.py  app.py  config.py  domain.py  routes.py  service.py
app/infra/: db.py  models.py  queue.py
etc/: .env.example  .env.test.example
migrations/: env.py
migrations/versions/: 20260628_initial.py
tests/: conftest.py
tests/fixtures/: fakes.py
tests/integration/: conftest.py
tests/integration/api/: test_tasks.py
tests/unit/use_cases/: test_cancel_task.py  test_create_task.py
